--- a/index.html
+++ b/index.html
@@ -14,91 +14,69 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
         rel="stylesheet">
 
-    <!-- Анімація -->
+    <!-- animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-    <!-- Нормалізатор -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
-
-    <!-- Стилі -->
     <link rel="stylesheet" href="./css/main.min.css">
 
 </head>
 
 <body class="page-body">
 
-    <!-- Шапка сайту -->
     <header class="page-header " data-header data-aos="fade-down" data-aos-easing="ease-out-cubic"
         data-aos-duration="1000">
         <div class="container page-header__container">
 
-            <!-- Логотип -->
-            <a href="./index.html" aria-label="Логотип сайту BarberShop">
+            <a href="./index.html" aria-label="Logo">
                 <svg width="69" height="56">
                     <use class="logo " href="./img/sprits/sprit.svg#icon-logo" data-logo></use>
                 </svg>
             </a>
 
-
-            <!-- Навігація по сайту -->
             <nav class="main-nav page-header__main-nav">
-
-                <!-- Гамбургер -->
                 <button class="main-nav__button" type="button" aria-controls="menu-container" aria-expanded="false"
                     data-menu-button>
-                    <svg width="34" height="29" aria-label="Перемикач мобільного меню">
+                    <svg width="34" height="29" aria-label="Mobile menu">
                         <use class="icon-cross" href="./img/sprits/sprit.svg#icon-exit"></use>
                         <use class="icon-menu" href="./img/sprits/sprit.svg#icon-menu"></use>
                     </svg>
                 </button>
 
-                <!-- Бекдроп -->
+                <!-- Backdrop -->
                 <div class="main-nav__backdrop" data-menu></div>
 
-                <!-- Випливаюче меню -->
+                <!-- Pop-up menu -->
                 <div class="main-nav__wrapper" id="menu-container">
 
-                    <!-- Компоненти меню -->
                     <ul class="main-nav__list list">
-
                         <li class="main-nav__item">
-                            <a class="main-nav__link link" href="#about">Про нас</a>
+                            <a class="main-nav__link link" href="#about">About</a>
                         </li>
-
                         <li class="main-nav__item">
-                            <a class="main-nav__link link" href="#price">Послуги та ціни</a>
+                            <a class="main-nav__link link" href="#price">Services</a>
                         </li>
-
                         <li class="main-nav__item">
-                            <a class="main-nav__link link" href="#team">Майстри</a>
+                            <a class="main-nav__link link" href="#team">Masters</a>
                         </li>
-
                         <li class="main-nav__item">
-                            <a class="main-nav__link link" href="#contact">Контакти</a>
+                            <a class="main-nav__link link" href="#contact">Contacts</a>
                         </li>
                     </ul>
 
                     <!-- Замовити стрижку -->
                     <div class="main-nav__group">
-                        <a class="phone-link link" href="tel:+380441111111" target="_blank" rel="noreferrer noopener"
-                            aria-label="Номер телефону">+38 044 111 11 11</a>
+                        <a class="phone-link link" href="tel:+1416000000" target="_blank" rel="noreferrer noopener"
+                            aria-label="Номер телефону">+1 416 000 00 00/a>
                         <button class="btn btn--page-header btn--anim-pulse" type="button"
-                            data-modal-open>онлайн-запис</button>
+                            data-modal-open>book online</button>
                     </div>
-
-
                 </div>
-
             </nav>
-
-
         </div>
     </header>
 
-    <!-- Секція main -->
     <main>
-
-        <!-- Розділ Герой -->
+        <!--hero-->
         <section class="hero">
             <div class="container hero__container">
 
