--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <!-- Замовити стрижку -->
                     <div class="main-nav__group">
                         <a class="phone-link link" href="tel:+1416000000" target="_blank" rel="noreferrer noopener"
-                            aria-label="Номер телефону">+1 416 000 00 00/a>
+                            aria-label="Номер телефону">+1 416 000 00 00</a>
                         <button class="btn btn--page-header btn--anim-pulse" type="button"
                             data-modal-open>book online</button>
                     </div>
@@ -79,13 +79,10 @@
         <!--hero-->
         <section class="hero">
             <div class="container hero__container">
-
-                <!-- Соціальні мережі -->
+                <!-- social links -->
                 <div class="hero__left-side" data-aos="fade-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="1000" data-aos-delay="200">
-
                     <ul class="social-links-list hero__social-links-list list">
-
                         <li>
                             <a class="social-links-list__link link" href="https://www.instagram.com/" target="_blank"
                                 rel="noopener noreferrer" aria-label="instagram">Instagram</a>
@@ -94,23 +91,22 @@
                             <a class="social-links-list__link link" href="htts://www.youtube.com" target="_blank"
                                 rel="noopener noreferrer" aria-label="youtube">Youtube</a>
                         </li>
-
                     </ul>
                 </div>
 
-                <!-- Оффер -->
+                <!-- offer -->
                 <div class="hero__group">
                     <p class="uppertitle uppertitle--dark-mode" lang="en" data-aos="fade-left"
                         data-aos-easing="ease-out-cubic" data-aos-duration="1000" data-aos-delay="300">A hair salon for
-                        men in Kyiv</p>
+                        men </p>
 
                     <h1 class="main-title" lang="en" data-aos="fade-right" data-aos-easing="ease-out-cubic"
                         data-aos-duration="1000" data-aos-delay="400">BarberShop</h1>
 
                     <p class="subtitle subtitle--dark-mode subtitle--hero-mb" data-aos="fade-right"
                         data-aos-easing="ease-out-cubic" data-aos-duration="1000" data-aos-delay="500">
-                        Ми експерти у модних чоловічих стрижках.
-                        Працюємо швидко, обережно та зі смаком.
+                        We are experts in trendy men's haircuts.
+                        We work quickly, carefully and with a good taste
                     </p>
                 </div>
 
