--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </p>
                 </div>
 
-                <!-- Слайдер -->
+                <!-- slider -->
                 <div class="slider">
                     <ul class="slider__pagination list" data-aos="fade-left" data-aos-easing="ease-out-cubic"
                         data-aos-duration="1000" data-aos-delay="300">
@@ -119,15 +119,15 @@
                         <li class="slider__item"></li>
                     </ul>
 
-                    <!-- Кнопки перемикання слайдів -->
+                    <!-- buttons for slides -->
                     <ul class="slider__controls list" data-aos="fade-left" data-aos-easing="ease-out-cubic"
                         data-aos-duration="1000" data-aos-delay="300">
                         <li class="slider__item-control">
-                            <button class="slider__btn slider__btn--prev " type="button">Назад</button>
+                            <button class="slider__btn slider__btn--prev " type="button">Back</button>
                         </li>
                         <li class="slider__item-control">
                             <button class="slider__btn slider__btn--next slider__btn--active"
-                                type="button">Вперед</button>
+                                type="button">Forward</button>
                         </li>
                     </ul>
                 </div>
@@ -136,16 +136,16 @@
 
         </section>
 
-        <!-- Розділ про нас -->
+        <!-- about section -->
         <section class="section about" id="about">
             <div class="container about__container">
 
-                <!-- Фотографії -->
+                <!-- photos -->
                 <ul class="photos grid list">
                     <li class="photos__item grid__item" data-aos="fade-up" data-aos-easing="ease-out-cubic"
                         data-aos-duration="1000" data-aos-delay="100">
                         <picture>
-                            <!-- розширення webp -->
+                            <!--  webp -->
                             <source srcset="
                                         ./img/about/pc/WebP/img1.webp 270w,
                                         ./img/about/pc/WebP/img1-2x.webp 540w" sizes="(min-width: 1200px) 270px"
@@ -155,7 +155,7 @@
                                         ./img/about/tablet/WebP/img1-2x.webp 660w" sizes="(min-width: 768px) 330px"
                                 type="image/webp" media="(min-width: 768px)" />
 
-                            <!-- розширення jpeg -->
+                            <!--  jpeg -->
                             <source srcset="
                                         ./img/about/pc/img1.jpg 270w, 
                                         ./img/about/pc/img1-2x.jpg 540w" sizes="(min-width: 1200px) 270px"
@@ -165,7 +165,7 @@
                                         ./img/about/tablet/img1-2x.jpg 660w" sizes="(min-width: 768px) 330px"
                                 type="image/jpeg" media="(min-width: 768px)" />
 
-                            <img class="img" src="./img/about/tablet/img1.jpg" alt="Гоління бороди" />
+                            <img class="img" src="./img/about/tablet/img1.jpg" alt="shaving" />
                         </picture>
 
                     </li>
@@ -173,7 +173,7 @@
                     <li class="photos__item grid__item" data-aos="fade-down" data-aos-easing="ease-out-cubic"
                         data-aos-duration="1000" data-aos-delay="200">
                         <picture>
-                            <!-- розширення webp -->
+                            <!--  webp -->
                             <source srcset="
                                         ./img/about/pc/WebP/img2.webp 270w,
                                         ./img/about/pc/WebP/img2-2x.webp 540w" sizes="(min-width: 1200px) 270px"
@@ -183,7 +183,7 @@
                                         ./img/about/tablet/WebP/img2-2x.webp 660w" sizes="(min-width: 768px) 330px"
                                 type="image/webp" media="(min-width: 768px)" />
 
-                            <!-- розширення jpeg -->
+                            <!--  jpeg -->
                             <source srcset="
                                         ./img/about/pc/img2.jpg 270w, 
                                         ./img/about/pc/img2-2x.jpg 540w" sizes="(min-width: 1200px) 270px"
@@ -193,74 +193,71 @@
                                         ./img/about/tablet/img2-2x.jpg 660w" sizes="(min-width: 768px) 330px"
                                 type="image/jpeg" media="(min-width: 768px)" />
 
-                            <img class="img" src="./img/about/tablet/img2.jpg" alt="Гоління небезпечною бритвою" />
+                            <img class="img" src="./img/about/tablet/img2.jpg" alt="shaving" />
                         </picture>
 
                     </li>
                 </ul>
 
-                <!-- Опис -->
+                <!-- description -->
                 <div class="about__description-group">
                     <p class="uppertitle uppertitle--light-mode" data-aos="fade-left" data-aos-easing="ease-out-cubic"
-                        data-aos-duration="1000" data-aos-delay="100">ПРО НАС</p>
+                        data-aos-duration="1000" data-aos-delay="100">ABOUT</p>
 
-                    <!-- Заголовок розділів -->
+                    <!-- title of section -->
                     <h2 class="title title--about-mb title--light-mode" data-aos="fade-left"
                         data-aos-easing="ease-out-cubic" data-aos-duration="1000" data-aos-delay="200">
-                        Кращий Барбершоп твого міста
+                        Best Barbershop of your city
                     </h2>
                     <p class="subtitle subtitle--about-mb" data-aos="fade-left" data-aos-easing="ease-out-cubic"
                         data-aos-duration="1000" data-aos-delay="300">
-                        Якщо ти хочеш додати у свій образ більше впевненості, тобі точно до нас.
-                    </p>
+                        If you want to add more confidence to your image, you'll definitely come to us.                    </p>
                     <p class="description-txt" data-aos="fade-left" data-aos-easing="ease-out-cubic"
                         data-aos-duration="1000" data-aos-delay="400">
-                        Ми команда, яка ніколи не зупиняється на досягнутому
-                        і прагне змін. І коли ти потрапиш до рук нашого майстра,
-                        то вже ніколи не зможеш бути тим самим. Ми команда, яка завжди з клієнтами "на одній хвилі".
-                        Тому ми завжди
-                        готові вдосконалити кожного, хто до нас приходить!
+                        We are a team that never stops
+                        and longs for change. And when you fall into the hands of our master,
+                        then you can never be the same again. We are a team that is always "on the same wavelength" with clients.
+                        That's why we always ready to improve everyone who comes to us!
                     </p>
                     <button class="btn btn--light-mode" type="button" data-aos="fade-left"
                         data-aos-easing="ease-out-cubic" data-aos-duration="1000"
-                        data-aos-delay="500">онлайн-запис</button>
+                        data-aos-delay="500">Book online</button>
                 </div>
             </div>
         </section>
 
-        <!-- Розділ послуги т ціни -->
+        <!-- services section -->
         <section class="section price" id="price">
             <div class="container">
                 <p class="uppertitle uppertitle--dark-mode" data-aos="fade-left" data-aos-easing="ease-out-cubic"
-                    data-aos-duration="1000" data-aos-delay="100">Проведи час у компанії кращих майстрів</p>
+                    data-aos-duration="1000" data-aos-delay="100">Spend time in the company of the best masters</p>
 
-                <!-- Заголовок розділів -->
+                <!-- title of section -->
                 <h2 class="title title--dark-mode" data-aos="fade-right" data-aos-easing="ease-out-cubic"
-                    data-aos-duration="1000" data-aos-delay="200">Послуги та ціни</h2>
+                    data-aos-duration="1000" data-aos-delay="200">Services & prices</h2>
 
-                <!-- Таблиці цін -->
+                <!-- prices -->
                 <ul class="price-list list">
 
                     <li class="price-list__item" data-aos="fade-up" data-aos-easing="ease-out-cubic"
                         data-aos-duration="1000" data-aos-delay="400">
 
-                        <!-- Блок цін -->
                         <ul class="price-inner list">
                             <li class="price-inner__item">
-                                <span class="price-inner__desc">Чоловіча стрижка</span>
-                                <span>від 300 грн.</span>
+                                <span class="price-inner__desc">Men's haircut</span>
+                                <span>from 30 USD</span>
                             </li>
                             <li class="price-inner__item">
-                                <span class="price-inner__desc">Стрижка бороди</span>
-                                <span>від 200 грн.</span>
+                                <span class="price-inner__desc">Beard haircut</span>
+                                <span>from 30 USD</span>
                             </li>
                             <li class="price-inner__item">
-                                <span class="price-inner__desc">Стрижка вусів</span>
-                                <span>від 200 грн.</span>
+                                <span class="price-inner__desc">Mustache cutting</span>
+                                <span>from 25 USD</span>
                             </li>
                             <li class="price-inner__item">
-                                <span class="price-inner__desc">Гоління небезпечною бритвою</span>
-                                <span>від 200 грн.</span>
+                                <span class="price-inner__desc">Shaving with a dangerous razor</span>
+                                <span>from 30 USD</span>
                             </li>
                         </ul>
                     </li>
@@ -271,39 +268,39 @@
                         <!-- Блок цін -->
                         <ul class="price-inner list">
                             <li class="price-inner__item">
-                                <span class="price-inner__desc">Стрижка у стажера</span>
-                                <span>від 50 грн</span> .
+                                <span class="price-inner__desc">Haircut at the intern</span>
+                                <span>from 20 USD</span> .
                             </li>
                             <li class="price-inner__item">
-                                <span class="price-inner__desc">Стрижка під насадку</span>
-                                <span>від 200 грн.</span>
+                                <span class="price-inner__desc">Haircut under the nozzle</span>
+                                <span>from 25 USD</span>
                             </li>
                             <li class="price-inner__item">
-                                <span class="price-inner__desc">Дитяча стрижка (до 12 років)</span>
-                                <span>від 300 грн.</span>
+                                <span class="price-inner__desc">Children's haircut (up to 12 years old)</span>
+                                <span>from 25 USD</span>
                             </li>
                             <li class="price-inner__item">
-                                <span class="price-inner__desc">Камуфлювання сивини</span>
-                                <span>від 200 грн.</span>
+                                <span class="price-inner__desc">Gray hair camouflage</span>
+                                <span>from 25 USD</span>
                             </li>
                         </ul>
                     </li>
 
                 </ul>
 
-                <!-- Кнопка -->
+                <!-- button -->
                 <div class="price__wrapper" data-aos="fade-down" data-aos-easing="ease-out-cubic"
                     data-aos-duration="1000" data-aos-delay="500">
-                    <button class="btn btn--dark-mode" type="button">онлайн-запис</button>
+                    <button class="btn btn--dark-mode" type="button">Book online</button>
                 </div>
             </div>
         </section>
 
-        <!-- Розділ переваги -->
+        <!--  Benefit section -->
         <section class="section benefits">
             <div class="container benefits__container">
 
-                <!-- Ліва частина -->
+                <!-- Left part -->
                 <div class="benefits__left-side">
                     <ul class="benefits__list list">
                         <div>
@@ -313,7 +310,7 @@
                                     600
                                     <sup class="benefits__decor">&#43;</sup>
                                 </p>
-                                <p class="benefits__desc">Задоволених клієнтів на день</p>
+                                <p class="benefits__desc">Satisfied customers per day</p>
                             </li>
 
                             <li class="benefits__item" data-aos="zoom-out" data-aos-easing=" ease-out-cubic"
@@ -322,7 +319,7 @@
                                     50
                                     <sup class="benefits__decor">&#43;</sup>
                                 </p>
-                                <p class="benefits__desc">Нагород за відмінний сервіс</p>
+                                <p class="benefits__desc">Award for excellent service</p>
                             </li>
                         </div>
 
@@ -333,7 +330,7 @@
                                     20
                                     <sup class="benefits__decor">&#43;</sup>
                                 </p>
-                                <p class="benefits__desc">Найкращих майстрів Києва</p>
+                                <p class="benefits__desc">The best masters</p>
                             </li>
 
                             <li class="benefits__item" data-aos="zoom-out" data-aos-easing=" ease-out-cubic"
@@ -342,30 +339,30 @@
                                     100
                                     <sup class="benefits__decor">&#43;</sup>
                                 </p>
-                                <p class="benefits__desc">Подарунків постійним клієнтам</p>
+                                <p class="benefits__desc">Gifts to regular customers</p>
                             </li>
                         </div>
                     </ul>
                 </div>
 
-                <!-- Права чатстина -->
+                <!-- Right side -->
                 <div class="benefits__right-side">
                     <p class="uppertitle uppertitle--light-mode" data-aos="fade-left" data-aos-easing="ease-out-cubic"
                         data-aos-duration="1000" data-aos-delay="500">стара традиційна школа</p>
 
-                    <!-- Заголовок розділів -->
+                    <!-- section title -->
                     <h2 class="title title--light-mode" data-aos="fade-left" data-aos-easing="ease-out-cubic"
-                        data-aos-duration="1000" data-aos-delay="600">Чому приходять саме до нас?</h2>
+                        data-aos-duration="1000" data-aos-delay="600">Why do they come to us?</h2>
                     <p class="subtitle" data-aos="fade-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000"
                         data-aos-delay="700">
-                        Про нас говорять лише добре. Але краще 1 раз побачити та відчути,
-                        ніж 10 разів прочитати.
+                        Only good things are said about us. But it is better to see and feel once,
+                        than 10 times to read.
                     </p>
                 </div>
             </div>
         </section>
 
-        <!-- Розділ команда -->
+        <!-- Team section -->
         <section class="section team" id="team">
 
             <div class="container">
